farmok kartya + letrehoz + localstorage

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
     <main>
         <nav>
-
         </nav>
+        <article>
+            <div id="farms"></div>
+            <div id="forms"></div>
+        </article>
     </main>
 </body>
 </html>
